; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_netback.c_xenvif_ctrl_work_todo.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_netback.c_xenvif_ctrl_work_todo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenvif = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xenvif*)* @xenvif_ctrl_work_todo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xenvif_ctrl_work_todo(%struct.xenvif* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.xenvif*, align 8
  store %struct.xenvif* %0, %struct.xenvif** %3, align 8
  %4 = load %struct.xenvif*, %struct.xenvif** %3, align 8
  %5 = getelementptr inbounds %struct.xenvif, %struct.xenvif* %4, i32 0, i32 0
  %6 = call i32 @RING_HAS_UNCONSUMED_REQUESTS(i32* %5)
  %7 = call i64 @likely(i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %11

11:                                               ; preds = %10, %9
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @RING_HAS_UNCONSUMED_REQUESTS(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
